fix: overflow

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -39,7 +39,7 @@
 
 body {
   font-family: 'Lan';
-  @apply overflow-hidden;
+  @apply overflow-x-hidden;
 }
 
 canvas {
